--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Clicker Empire Game</title>
 </head>
 <body>
-    <div id="welcome" class="d-block bg-dark">
+    <div id="welcome" class="d-block vh-100 bg-dark">
         <div class="d-flex vh-100 justify-content-center flex-column align-items-center">
             <div id="userInput" class="bg-white p-4 contaier d-flex justify-content-center flex-column align-items-center" >
                 <h2 class="pb-2 col">Click Empire Game</h2>
