--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
     <title>Clicker Empire Game</title>
 </head>
 <body>
-    <div id="welcome" class="d-block vh-100 bg-dark">
-        <div class="d-flex vh-100 justify-content-center flex-column align-items-center">
-            <div id="userInput" class="bg-white p-4 contaier d-flex justify-content-center flex-column align-items-center" >
-                <h2 class="pb-2 col">Click Empire Game</h2>
-                <form class="col" onsubmit="initializeUser(); event.preventDefault();">
-                    <div class="form-group">
-                        <input id="userName" class="form-control" type="text" placeholder="Your name" required>
-                    </div>
-                    <div class="form-group d-flex justify-content-between">
-                        <button class="btn btn-primary px-5" type="submit">New</button>
-                        <button class="btn btn-primary px-5" type="submit">Login</button>
-                    </div>
-                </form>
-            </div>
+    <div id="welcome" class="d-flex vh-100 bg-dark justify-content-center flex-column align-items-center">
+        <div id="userInput" class="bg-white p-4 contaier d-flex justify-content-center flex-column align-items-center" >
+            <h2 class="pb-2 col">Click Empire Game</h2>
+            <form class="col" onsubmit="initializeUser(); event.preventDefault();">
+                <div class="form-group">
+                    <input id="userName" class="form-control" type="text" placeholder="Your name" required>
+                </div>
+                <div class="form-group d-flex justify-content-between">
+                    <button class="btn btn-primary px-5" type="submit">New</button>
+                    <button class="btn btn-primary px-5" type="submit">Login</button>
+                </div>
+            </form>
         </div>
     </div>
-    <div id="game" class="d-none vh-100 bg-dark"></div>
+    <div id="game" class="d-none vh-100 bg-dark justify-content-center align-items-center"></div>
 
     <script src="index.js"></script>
 </body>
