--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-group d-flex justify-content-between">
                     <button class="btn btn-primary px-5" type="submit">New</button>
-                    <button class="btn btn-primary px-5" type="submit">Login</button>
+                    <button class="btn btn-primary px-5" type="button" onclick=>Login</button>
                 </div>
             </form>
         </div>
@@ -29,6 +29,7 @@
         <div id="userCtrl" class="col-8">
             <div id="userInfo" class="container bg-navy my-3"></div>
             <div id="buyItems" class="commodity overflow-scroll"></div>
+            <div id="btns" class="d-flex justify-content-end"></div>
         </div>
     </div>
 
