--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-group d-flex justify-content-between">
                     <button class="btn btn-primary px-5" type="submit">New</button>
-                    <button class="btn btn-primary px-5" type="button" onclick=>Login</button>
+                    <button class="btn btn-primary px-5" type="button" onclick="login();">Login</button>
                 </div>
             </form>
         </div>
